# HotLINK

./: CITATION.cff  HotLINK_tutorial.ipynb  MANIFEST.in  README.md  environment.yml  hotlink_example.py  pyproject.toml  run_hotlink.py  setup.py  support_functions.py  support_functions_2.py
.ipynb_checkpoints/: README-checkpoint.md
HotLINK model/: keras_metadata.pb  saved_model.pb
HotLINK model/variables/: variables.data-00000-of-00001  variables.index
HotLINK_runner/: __init__.py  main.py  utils.py
example_data/: I04_20190701_001800_shis.tif  I04_20190701_122400_shis.tif  I04_20190701_131800_shis.tif  I04_20190701_140600_shis.tif  I04_20190702_000000_shis.tif  I04_20190702_004800_shis.tif  I04_20190702_130000_shis.tif  I04_20190702_143600_shis.tif  I04_20190703_003000_shis.tif  I04_20190703_114800_shis.tif  I04_20190703_141800_shis.tif  I04_20190703_214200_shis.tif  I04_20190703_223000_shis.tif  I04_20190703_231800_shis.tif  I04_20190704_121800_shis.tif  I04_20190704_122400_shis.tif  I04_20190704_131200_shis.tif  I04_20190704_140000_shis.tif  I04_20190704_235400_shis.tif  I04_20190705_134200_shis.tif  I04_20190705_143000_shis.tif  I04_20190705_215400_shis.tif  I04_20190706_002400_shis.tif  I04_20190706_123600_shis.tif  I04_20190707_000600_shis.tif  I04_20190707_135400_shis.tif  I04_20190707_144200_shis.tif  I04_20190707_220600_shis.tif  I04_20190707_234200_shis.tif  I04_20190708_003600_shis.tif  I04_20190708_115400_shis.tif  I04_20190708_223600_shis.tif  I04_20190708_232400_shis.tif  I04_20190709_113600_shis.tif  I04_20190709_131800_shis.tif  I04_20190709_221800_shis.tif  I04_20190710_000000_shis.tif  I04_20190710_130000_shis.tif  I04_20190710_134800_shis.tif  I04_20190710_143600_shis.tif  (+227 more)
hotlink/: MANIFEST.in  __init__.py  cli.py  load_example_data.py  load_hotlink_model.py  preprocess.py  process.py  support_functions.py
hotlink/.ipynb_checkpoints/: __init__-checkpoint.py
hotlink/example_data/: I04_20190701_113600_shis.tif  I04_20190701_221800_shis.tif  I04_20190701_230600_shis.tif  I04_20190702_120600_shis.tif  I04_20190702_134800_shis.tif  I04_20190702_220000_shis.tif  I04_20190702_224800_shis.tif  I04_20190702_233600_shis.tif  I04_20190703_124200_shis.tif  I04_20190703_133000_shis.tif  I04_20190704_001200_shis.tif  I04_20190704_010000_shis.tif  I04_20190704_144800_shis.tif  I04_20190704_221200_shis.tif  (+228 more)
timeseries_results/: VIIRS_augu.csv  VIIRS_bogo.csv  VIIRS_clev.csv  VIIRS_okmo_with_mirova.csv  VIIRS_pavl.csv  VIIRS_redo.csv  VIIRS_shis.csv
(+4 files in other folders)
