[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "hotlink"
version = "1.3"
description = "the HOTspot Learning and Identification NetworK"
readme = "README.md"
authors = [
    {name = "Pablo Saunders-Shultz", email = "csaundersshultz@gmail.com"},
    {name = "Mario Fernando Angarita Vargas", email = "mfangaritasr@alaska.edu"}
]
dependencies = [
    "numpy",
    "pandas",
]

[project.urls]
documentation = "https://github.com/csaundersshultz/HotLINK"
repository = "https://github.com/csaundersshultz/HotLINK"
