[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "hotlink"
version = "1.4"
description = "the HOTspot Learning and Identification NetworK"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Pablo Saunders-Shultz", email = "csaundersshultz@gmail.com"},
    {name = "Mario Fernando Angarita Vargas", email = "mfangaritasr@alaska.edu"}
]
dependencies = [
    "numpy",
    "pandas",
    "ephem",
    "earthaccess",
    "pyresample",
    "scipy",
    "scikit-image",
    "Pillow",
    "tensorflow<2.16",
    "matplotlib",
    "satpy[modis_l1b]",
    "satpy[viirs_l1b]",
    "utm"
]

[tool.setuptools]
py-modules = []

[project.urls]
documentation = "https://github.com/csaundersshultz/HotLINK"
repository = "https://github.com/csaundersshultz/HotLINK"
